--- a/transparentNavbar/index.html
+++ b/transparentNavbar/index.html
@@ -12,13 +12,17 @@
 <body>
     <div class="db">
         <nav>
+            <input type="checkbox" id="hide">
+            <div class="button-menu">
+                <i class="fa-solid fa-bars"></i>
+            </div>
             <div class="navBar">
-                <h1><i class="fa-solid fa-bars"></i> MENU</h1>
+                <h1> MENU</h1>
                 <ul>
                     <li><a href="#"><i class="fa-solid fa-house"></i> Home</a></li>
                     <li><a href="#"><i class="fa-solid fa-globe"></i> Tranding</a></li>
                     <li><a href="#"><i class="fa-solid fa-server"></i> Software</a></li>
-                    <li><a href="#"><i class="fa-solid fa-house"></i> It</a></li>
+                    <li><a href="#"><i class="fa-solid fa-computer"></i> It</a></li>
                     <li><a href="#"><i class="fa-solid fa-database"></i> Database</a></li>
                     <li><a href="#"><i class="fa-solid fa-id-card"></i> Portfolio</a></li>
                     <li><a href="#"><i class="fa-solid fa-envelope"></i> About</a></li>
