--- a/transparentNavbar/index.html
+++ b/transparentNavbar/index.html
@@ -12,10 +12,11 @@
 <body>
     <div class="db">
         <nav>
-            <input type="checkbox" id="hide">
-            <div class="button-menu">
-                <i class="fa-solid fa-bars"></i>
-            </div>
+            <input type="checkbox" id="check">
+            <label for="check">
+                <i class="fa-solid fa-less-than" id="start"></i>
+                <i class="fa-solid fa-bars" id="end"></i>
+            </label>
             <div class="navBar">
                 <h1> MENU</h1>
                 <ul>
