--- a/transparentNavbar/index.html
+++ b/transparentNavbar/index.html
@@ -7,9 +7,11 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href="css/fontello.css" rel="stylesheet" type="text/css" />
     <script src="https://kit.fontawesome.com/236e28bd84.js" crossorigin="anonymous"></script>
+    <script src="./js/app.js"></script>
     <title>Transparent navbar example</title>
 </head>
 <body>
+    <script src="./js/app.js"></script>
     <div class="db">
         <nav>
             <input type="checkbox" id="check">
@@ -17,20 +19,20 @@
                 <i class="fa-solid fa-less-than" id="start"></i>
                 <i class="fa-solid fa-bars" id="end"></i>
             </label>
-            <div class="navBar">
+            <div class="navBar" id="menu">
                 <h1> MENU</h1>
                 <ul>
-                    <li><a href="#"><i class="fa-solid fa-house"></i> Home</a></li>
-                    <li><a href="#"><i class="fa-solid fa-globe"></i> Tranding</a></li>
-                    <li><a href="#"><i class="fa-solid fa-server"></i> Software</a></li>
-                    <li><a href="#"><i class="fa-solid fa-computer"></i> It</a></li>
-                    <li><a href="#"><i class="fa-solid fa-database"></i> Database</a></li>
-                    <li><a href="#"><i class="fa-solid fa-id-card"></i> Portfolio</a></li>
-                    <li><a href="#"><i class="fa-solid fa-envelope"></i> About</a></li>
+                    <li><a href="#" class="tab active"><i class="fa-solid fa-house"></i> Home</a></li>
+                    <li><a href="#" class="tab"><i class="fa-solid fa-globe"></i> Tranding</a></li>
+                    <li><a href="#" class="tab"><i class="fa-solid fa-server"></i> Software</a></li>
+                    <li><a href="#" class="tab"><i class="fa-solid fa-computer"></i> It</a></li>
+                    <li><a href="#" class="tab"><i class="fa-solid fa-database"></i> Database</a></li>
+                    <li><a href="#" class="tab"><i class="fa-solid fa-id-card"></i> Portfolio</a></li>
+                    <li><a href="#" class="tab"><i class="fa-solid fa-envelope"></i> About</a></li>
                 </ul>
             </div>
         </nav>
     </div>
-   
+    <script src="./js/app.js"></script>
 </body>
 </html>
