change active li

--- a/transparentNavbar/index.html
+++ b/transparentNavbar/index.html
@@ -8,6 +8,7 @@
     <link href="css/fontello.css" rel="stylesheet" type="text/css" />
     <script src="https://kit.fontawesome.com/236e28bd84.js" crossorigin="anonymous"></script>
     <script src="./js/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>Transparent navbar example</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
             <div class="navBar" id="menu">
                 <h1> MENU</h1>
                 <ul>
-                    <li><a href="#" class="tab active"><i class="fa-solid fa-house"></i> Home</a></li>
+                    <li><a href="index.html" class="tab"><i class="fa-solid fa-house"></i> Home</a></li>
                     <li><a href="#" class="tab"><i class="fa-solid fa-globe"></i> Tranding</a></li>
                     <li><a href="#" class="tab"><i class="fa-solid fa-server"></i> Software</a></li>
                     <li><a href="#" class="tab"><i class="fa-solid fa-computer"></i> It</a></li>
