--- a/transparentNavbar/index.html
+++ b/transparentNavbar/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <script src="./js/app.js"></script>
+   
     <div class="db">
         <nav>
             <input type="checkbox" id="check">
@@ -32,7 +33,22 @@
                     <li><a href="#" class="tab"><i class="fa-solid fa-envelope"></i> About</a></li>
                 </ul>
             </div>
+            <div class="top">
+                <div class="search">
+                    <form class="inputek">
+                        <input type="search"  class="input-field" name="search" placeholder="Search everywhere" required>         
+                    </form>        
+                </div>
+                <div class="line">
+                    <ul>
+                        <li>
+                            <a href="login.html"><i class="fa-regular fa-user"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
+        
     </div>
     <script src="./js/app.js"></script>
 </body>
