--- a/transparentNavbar/index.html
+++ b/transparentNavbar/index.html
@@ -39,12 +39,22 @@
                         <input type="search"  class="input-field" name="search" placeholder="Search everywhere" required>         
                     </form>        
                 </div>
-                <div class="line">
+                <div class="line" onclick="menuU()">
                     <ul>
                         <li>
-                            <a href="login.html"><i class="fa-regular fa-user"></i></a>
+                            <a href="#" ><i class="fa-regular fa-user"></i></a>
                         </li>
                     </ul>
+                    <div class="menuU">
+                        <ul>
+                            <li>
+                                <a href="#" class="tab2"><i class="fa-regular fa-address-card"></i>Register</a>
+                            </li>
+                            <li>
+                                <a href="#" class="tab2"><i class="fa-sharp fa-solid fa-right-to-bracket"></i>Sign in</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
