add user menu toggle

--- a/transparentNavbar/index.html
+++ b/transparentNavbar/index.html
@@ -40,12 +40,15 @@
                     </form>        
                 </div>
                 <div class="line" onclick="menuU()">
+                    
                     <ul>
                         <li>
                             <a href="#" ><i class="fa-regular fa-user"></i></a>
                         </li>
                     </ul>
                     <div class="menuU">
+                        <h1> User Menu</h1>
+                        <hr>
                         <ul>
                             <li>
                                 <a href="#" class="tab2"><i class="fa-regular fa-address-card"></i>Register</a>
