add user menu toggle

--- a/transparentNavbar/index.html
+++ b/transparentNavbar/index.html
@@ -32,6 +32,9 @@
                     <li><a href="#" class="tab"><i class="fa-solid fa-id-card"></i> Portfolio</a></li>
                     <li><a href="#" class="tab"><i class="fa-solid fa-envelope"></i> About</a></li>
                 </ul>
+                <div class="copyright">
+                    
+                </div>
             </div>
             <div class="top">
                 <div class="search">
