--- a/transparentNavbar/index.html
+++ b/transparentNavbar/index.html
@@ -32,8 +32,8 @@
                     <li><a href="#" class="tab"><i class="fa-solid fa-id-card"></i> Portfolio</a></li>
                     <li><a href="#" class="tab"><i class="fa-solid fa-envelope"></i> About</a></li>
                 </ul>
-                <div class="copyright">
-                    
+                <div class="footer">
+                    Test.com &copy; 2023 Thank you for your visit
                 </div>
             </div>
             <div class="top">
