--- a/transparentNavbar/index.html
+++ b/transparentNavbar/index.html
@@ -59,7 +59,8 @@
             <div class="top">
                 <div class="search">
                     <form class="inputek">
-                        <input type="search"  class="input-field" name="search" placeholder="Search everywhere" required>         
+                        <input type="search"  class="input-field" name="search" placeholder="Search everywhere" required>
+                        <button type="submit"><img src="" alt=""></button>         
                     </form>        
                 </div>
                 <div class="line" onclick="menuU()">
