add search icon

--- a/transparentNavbar/index.html
+++ b/transparentNavbar/index.html
@@ -60,7 +60,7 @@
                 <div class="search">
                     <form class="inputek">
                         <input type="search"  class="input-field" name="search" placeholder="Search everywhere" required>
-                        <button type="submit"><img src="" alt=""></button>         
+                        <button type="submit"><img src="img/search.png" alt=""></button>         
                     </form>        
                 </div>
                 <div class="line" onclick="menuU()">
