add & example in text area

--- a/testAmp/index..html
+++ b/testAmp/index..html
@@ -10,7 +10,7 @@
 <body>
     <div class="content">
         <textarea id="test" name="w3review" rows="4" cols="50">
-           Test&Test
+             Test &amp;test
             </textarea>
             <br>
             <br>
