add & example in text area

--- a/testAmp/index..html
+++ b/testAmp/index..html
@@ -14,7 +14,7 @@
             </textarea>
             <br>
             <br>
-            <input type="submit" value="Submit" onclick="">
+            <input type="submit" value="Submit" onclick="xd()">
     </div>
 </body>
 </html>
