--- a/searchTest/index.html
+++ b/searchTest/index.html
@@ -3,13 +3,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style/style.css">
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href="css/fontello.css" rel="stylesheet" type="text/css" />
+    <script src="https://kit.fontawesome.com/236e28bd84.js" crossorigin="anonymous"></script>
+    <script src="./js/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>Search test</title>
 </head>
 <body>
     <div class="content">
-        <div class="search">
-            
-        </div>
+        <form action="" class="search">
+            <input type="" placeholder="Search everyWhere" name="search">
+            <button type="submit">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </button>
+        </form>
     </div>
 </body>
 </html>
