--- a/jsC/index.html
+++ b/jsC/index.html
@@ -7,6 +7,9 @@
     <script src="js/m1/obj.js"></script>
     <script src="js/m1/literals.js"></script>
     <script src="js/m1/Properties.js"></script>
+    <script src="js/m1/references.js"></script>
+    <script src="js/m1/notation.js"></script>
+    <script src="js/m1/methods.js"></script>
 </head>
 <body>
     
