--- a/jsC/index.html
+++ b/jsC/index.html
@@ -4,12 +4,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JSC</title>
-    <script src="js/m1/obj.js"></script>
+    <!-- <script src="js/m1/obj.js"></script>
     <script src="js/m1/literals.js"></script>
     <script src="js/m1/Properties.js"></script>
     <script src="js/m1/references.js"></script>
     <script src="js/m1/notation.js"></script>
-    <script src="js/m1/methods.js"></script>
+    <script src="js/m1/methods.js"></script> -->
+    <script src="js/m1/lab.js"></script>
 </head>
 <body>
     
