--- a/freezeColumns/index.html
+++ b/freezeColumns/index.html
@@ -9,7 +9,7 @@
 <body>
    <div class="view">
        <div class="wrap">
-           <table class="table">
+           <table class="table" id="test">
                <thead>
                    <tr>
                        <th class="sticky first-col">Number</th>
@@ -20,19 +20,19 @@
                </thead>
                <tbody>
                    <tr>
-                    <th class="sticky first-col">1</th>
+                    <th class="sticky first-col" data-column="number">1</th>
                     <th class="sticky sec-col">Test</th>
                     <th>hr</th>
                     <th>4444</th>
                    </tr>
                    <tr>
-                    <th class="sticky first-col">2</th>
+                    <th class="sticky first-col" data-column="number">2</th>
                     <th class="sticky sec-col">Test2</th>
                     <th>it</th>
                     <th>44444aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</th>
                    </tr>
                    <tr>
-                    <th class="sticky first-col">3</th>
+                    <th class="sticky first-col" data-column="number">3</th>
                     <th class="sticky sec-col">Test3</th>
                     <th>adadadadasdadadadadadadad</th>
                     <th>123aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</th>
@@ -41,5 +41,6 @@
             </table>
        </div>
    </div>
+   <script src="js/app.js"></script>
 </body>
 </html>
