--- a/jsC/index.html
+++ b/jsC/index.html
@@ -10,7 +10,7 @@
     <script src="js/m1/references.js"></script>
     <script src="js/m1/notation.js"></script>
     <script src="js/m1/methods.js"></script> -->
-    <script src="js/m1/m3/date3.js"></script>
+    <script src="js/m1/m5/lab1.js"></script>
 </head>
 <body>
     
